Flickering and responsiveness fixed

--- a/src/css/tic.css
+++ b/src/css/tic.css
@@ -63,6 +63,6 @@
 }
 @media screen and (max-width: 500px) {
     #title {
-        font-size: 30px;
+        font-size: 20px;
     }
   }
